--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <li>Weight: 2-88 pounds</li>
                     <li>Diet: Carnivore</li>
                 </ul>  
-            <img src="/img/types.jpg" alt="penguin types">
+            <img src="img/types.jpg" alt="penguin types">
             </div>
         <div class="img-left">
             <br>
             <br>
-            <img src="/img/penguins.jpg" alt="penguins"> 
+            <img src="img/penguins.jpg" alt="penguins"> 
             <div>
                 <p>Penguins are flightless seabirds that live almost exclusively below the equator. Some island-dwellers can be found in warmer climates, but most—including emperor, adélie, chinstrap, and gentoo penguins—reside in and around icy Antarctica. A thick layer of blubber and tightly-packed, oily feathers are ideal for colder temperatures.</p>
                 <p>The 18 different species of penguins can widely in shape and size but all have black bodies and white bellies. This protective countershading allows them to hide from predators like leopard seals and orcas while they swim.</p>
