--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <!-- Source:https://www.coolaustralia.org/fun-facts-about-penguins/ -->
         </ol>
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/O8qilxaBR20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/O8qilxaBR20" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/lAJB-dKTAQM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/lAJB-dKTAQM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
         </div>
         <br>
