--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header id="Start">
-            <div class="header-img"></div>
+    <header class="header-img" id="Start">
+       <h1>PENGUINS</h1>
     </header>
     <main>
         <h1>All about the penguins</h1>
